--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-hotkeys/build/hotkeys.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
   <script src="js/controllers.js"></script>
 </head>
@@ -25,7 +27,9 @@
         <div class="col-xs-3">
           <form class="navbar-form navbar-left" role="search" style="margin-top: 1.5em;">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search" id="searchBox">
+              <input type="text" placeholder="Search" class="form-control" id="searchBox"
+                     ng-model="selectedResult"
+                     typeahead="result as result.name for result in autocompleteResults | filter:{name:$viewValue} | limitTo:8">
             </div>
           </form>
         </div>
